# PixelateAI-ThePromptAnimator

./: .gitignore  README.md  SUPABASE_SETUP.md  db_cluster-07-06-2025@10-18-43.backup  manim_test.py  next.config.js  package-lock.json  package.json  sample_animation.py  supabase_schema.sql  tailwind.config.js  test.py  test_schema_connectivity.py
backend/: .dockerignore  .env.example  .gitignore  BACKEND_FIXES.md  Dockerfile  GEMINI_MIGRATION.md  GEMINI_QUICK_REF.md  QUICK_START.md  README.md  docker-compose.yml  env.example  env.example.txt  fix_supabase_storage.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run.py  test_gallery_supabase.py  test_pinecone_config.py  test_r2.py  test_r2_detailed.py  test_r2_simple.py  test_supabase.py  test_supabase_final.py  test_supabase_simple.py  test_supabase_storage.py  usage_example.py
backend/app/: __init__.py  config.py  generator.py  ingestion.py  main.py  renderer.py  router.py  scheduler.py  schemas.py  supabase_client.py  utils.py  video_storage.py
backend/app/shot_promting/: __init__.py  shot_promting.py
backend/app/shot_promting/examples/: DijkstraAlgorithm.txt  LevelOrder.txt  LinkedList.txt  PythagoreanProof.txt  bubblesort.txt  mergesort.txt
backend/supabase/.temp/: pooler-url  project-ref
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/about/: page.tsx
src/components/: ConditionalLayout.tsx  Navbar.tsx  landing-page.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useFFmpeg.ts
src/lib/: store.ts  supabase.ts
src/types/: react-draggable.d.ts  zustand.d.ts
(+15 files in other folders)
